[package]
name = "macro_env"
version = "0.1.7"
edition = "2021"
authors = ["Keiveulbugs"]
description = "A crate to fetch the environment variable easily through 3 different ways."
readme = "README.md"
repository = "https://github.com/keiveulbugs/macro_env"
keywords = ["env", "variable", "macro", "config", "dotenv"]
categories = ["config"]
license = "MIT"
documentation = "https://docs.rs/macro_env"
homepage = "https://github.com/keiveulbugs/macro_env"


